Style map to correct margin going offscreen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -560,7 +560,7 @@ footer p {
 
     #map iframe {
         width: 90%;
-        margin: 25px 20px;
+        margin: 25px 15px;
     }      
 }
 
